<resources>
    <string name="app_name">Ashish1</string>
    <string name="music_player">Music Player</string>
    <string name="shuffle_button">shuffle</string>
    <string name="favourites_button">favourites</string>
    <string name="playlist_button">playlist</string>
    <string name="total_number_of_songs">Total number of Songs</string>
    <string name="song_name">Song Name</string>
    <string name="back_button">Back Button</string>
    <string name="image_button">Image Button</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading</string>
    <string name="repeat_button">repeat Button</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \n World of Music </string>
    <string name="song_name1">Song Name</string>
    <string name="album">Album</string>
    <string name="equalizer">Equalizer</string>
    <string name="min_5">5 Minutes</string>
    <string name="min_10">10 Minutes</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_45">45 Minutes</string>
    <string name="min_60">1 Hrs</string>
    <string name="share_button">Share Button</string>
    <string name="timer_button">Timer Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_image">Song_image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">playlist_delete</string>
    <string name="user_name">User Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="this_is_offline_music_player_that_is_used_to_listen_the_music">This is Offline Music Player that is used to listen the music</string>
    <string name="ashish_ranjan">Ashish Ranjan</string>
    <string name="topic_feedback">Topic … Suggestion ,Error </string>
    <string name="email_feedback">Email Address(optional)</string>
    <string name="music_player_is_an_very_popular_free_music_playing_app_for_android_users_it_is_equipped_with_a_powerful_search_feature_which_enables_you_to_easily_and_quickly_scan_all_your_all_files_and_music_on_android_phone_moreover_you_are_allowed_to_change_music_player_themes_and_background_skin_in_addition_there_is_an_unique_equalizer_22_pre_set_music_tone_styles_designed_in_this_music_player_for_android_it_offers_you_a_more_professional_sound">Music Player is an very popular free music playing app for Android users. It is equipped with a powerful search feature which enables you to easily and quickly scan all your all files and music on Android phone. Moreover, you are allowed to change music player themes and background skin. In addition, there is an unique equalizer (22+ pre-set music tone styles) designed in this music player for Android. It offers you a more professional sound.</string>
    <string name="feedback">Feedback</string>
    <string name="send">send</string>
    <string name="version_name">Version Name</string>
    <string name="sort_by">Sort By</string>
    <string name="set_theme">Set Theme</string>
    <string name="search_song">Search Song</string>
    <string name="playlist_note">Tip: Click on + to Create New Playlist</string>
    <string name="play_next">Play Next</string>
    <string name="playlist_btn">Playlist Button</string>
    <string name="play_next_note">Tip: Long Press On Any music To Add It Into Play Next. &#128522;</string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites</string>
    <string name="back_btn">Back</string>
    <string name="about">About</string>
    <string name="sound">Sound</string>
</resources>