<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/topicFA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="15dp"
        android:gravity="center|start"
        android:hint="@string/topic_feedback"
        android:inputType="textEmailSubject"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="15dp"
        android:gravity="center|start"
        android:hint="@string/email_feedback"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/feedbackMsgFA"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:gravity="center|start"
        android:hint="@string/feedback"
        android:padding="16dp" />

    <Button
        android:id="@+id/sendBtnFA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:padding="16dp"
        android:text="@string/send"
        android:textColor="@color/black" />

</LinearLayout>