<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="@integer/material_motion_duration_long_1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/back_button"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:gravity="center"
            android:text="@string/music_player"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/favouriteBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:contentDescription="@string/image_button"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:tint="@android:color/holo_red_dark" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/current_song_imagePA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@mipmap/music_player_icon"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp" />

    <TextView
        android:id="@+id/current_song_namePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="@integer/material_motion_duration_long_1"
        android:gravity="center"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="@integer/material_motion_duration_long_1"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Previous Button-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/previousBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:src="@drawable/previous_icon" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:src="@drawable/pause_icon"
            app:shapeAppearanceOverlay="@style/curved" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:src="@drawable/next_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="@integer/material_motion_duration_long_1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/material_motion_duration_long_1"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:contentDescription="@string/repeat_button"
            android:src="@drawable/repeat"
            app:tint="@color/cool_pink" />


        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:contentDescription="@string/equalizer"
            android:src="@drawable/equalizer"
            app:tint="@color/cool_pink" />


        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:contentDescription="@string/timer_button"
            android:src="@drawable/timer"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:contentDescription="@string/share_button"
            android:src="@drawable/ic_baseline_share_24"
            app:tint="@color/cool_pink" />

        <ImageButton
            android:id="@+id/boosterBtnPA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@color/white"
            android:contentDescription="@string/share_button"
            android:src="@drawable/volume_icon"
            app:tint="@color/cool_pink" />

    </LinearLayout>

</LinearLayout>