<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/min_05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer"
            android:contentDescription="@string/min_5"
            app:tint="@color/cool_pink" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_5"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer"
            android:contentDescription="@string/min_10"
            app:tint="@color/cool_pink" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_10"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer"
            android:contentDescription="@string/min_15"
            app:tint="@color/cool_pink" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_15"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer"
            android:contentDescription="@string/min_30"
            app:tint="@color/cool_pink" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_30"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_45"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer"
            android:contentDescription="@string/min_45"
            app:tint="@color/cool_pink" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_45"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer"
            android:contentDescription="@string/min_60"
            app:tint="@color/cool_pink" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_60"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>


    </LinearLayout>

</LinearLayout>